<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderResumeActivity">


    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#9C27B0"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/order_resume_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_resume_subtitle"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/resumeTitle"
        app:layout_constraintEnd_toEndOf="@id/resumeTitle"
        app:layout_constraintTop_toBottomOf="@+id/resumeTitle" />


    <TextView
        android:id="@+id/centeredMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_resume_centered_message"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintTop_toBottomOf="@+id/background" />


    <ImageView
        android:id="@+id/packageImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_package_description"
        android:scaleType="centerCrop"
        tools:src="@drawable/sao_paulo_sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/centeredMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/packageCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/packageImage"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/packageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/packageCity"
        app:layout_constraintTop_toBottomOf="@id/packageCity"
        tools:text="08/12 - 10/12 de 2021" />

    <TextView
        android:id="@+id/packagePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/packageDate"
        app:layout_constraintTop_toBottomOf="@id/packageDate"
        tools:text="R$ 243.99" />



</androidx.constraintlayout.widget.ConstraintLayout>